--- a/app/src/main/res/layout/defend.xml
+++ b/app/src/main/res/layout/defend.xml
@@ -21,12 +21,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_marginTop="20dp">
+        android:gravity="center">
 
         <Button
             android:id="@+id/btn_yes"
-            android:backgroundTint="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Yes"
