--- a/app/src/main/res/layout/fragment_battle.xml
+++ b/app/src/main/res/layout/fragment_battle.xml
@@ -100,7 +100,7 @@
     <!-- Timer in the center of the screen -->
     <TextView
         android:id="@+id/timerText"
-        android:layout_width="50dp"
+        android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_gravity="center_horizontal|top"
         android:text="99s"
